HireRight/Content/sass/_mobile-default.scss
@import "_variables.scss";
@import "_mixins.scss";
@import "_%classes.scss";

html {
    @extend %centered;
}

hr {
    height: 3px;
    background-color: $darkNavyBlue;
    border: 0;
    margin: 0 1%;
    padding: 1px 0;
}

header {
    padding: -10px 0 0 0;
    margin: 0 0 20px 0;
    height: 30px;
    width: 100%;
    display: block;
}

footer {
    @extend %site_main_background;
    min-height: 20px;
    clear: both;
    width: 100%;
    position: relative;
    bottom: 0;
    padding-bottom: 4px;
}

body {
    @extend %centered;
    @extend %site_side_colors;
    padding: 0 $gutter 0 $gutter;
    font-size: $text_size;
    color: $text_default;
}

img{
    width: 100%;
    padding: 4px;
}

span .image-text-overlay {
    position: absolute;
    top: 200px;
    left: 0;
    width: 100%;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    @extend %site_main_background;
    padding: 8px $gutter 8px $gutter;
}

.btn {
    border: 3px solid black;
    @extend %site_highlight_color;
    font-size: $text_size;
    color: $text_default;
}

.navbar {
    @extend %site_highlight_color;
    color: $black;
    border: 3px solid $black;
    border-top: 0;
}

@media (max-width: 1330px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}

.btn-primary {
    @extend %site_highlight_color;
}

.jumbotron {
    @extend %site_highlight_color;
    width: 100%;
    margin-top: 3px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 5px;
    overflow: hidden;
    border: 6px solid $black;
}

.panel {
    @extend %site_main_background;
}

.input-validation-error {
    background-color: #fee;
    border: 1px solid #f00;
}

.form-control {
    @extend %site_highlight_color;
    -o-transition: border-color ease-in-out .5s, box-shadow ease-in-out .5s;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
    background-image: none;
    border: 3px solid $black;
    border-radius: 4px;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
    color: $black;
    display: block;
    height: 40px;
    font-size: $text_size;
    transition: border-color ease-in-out .5s, box-shadow ease-in-out .5s;
    overflow: hidden;
}

/*div {
    border: 2px dotted red;
}*/

a {
    color: $darkRed;
}

a:hover {
    color: $black;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-nav > li > a {
    color: $black;
    font-size: 14pt;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-nav > li > a:hover {
    color: $veryLightBlue;
    text-shadow: $black 2px 0px 1px;
}

.navbar-default .navbar-nav > li > a.current {
    color: white;
}

.navbar-default .navbar-nav > li > a.current:hover {
    color: $black;
    text-shadow: white 2px 0px 1px;
}

.navbar-default .navbar-brand {
    font-size: 18pt;
    font-weight: bold;
}

.centered {
    @extend %centered;
}

.processingIcon {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: $darkNavyBlue;
}

/* Override the default bootstrap behavior where horizontal description lists
   will truncate terms that are too long to fit in the left column
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select {
    margin: 0 $gutter 0 0;
    height: 40px;
}

textarea {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.text-shadow-red {
    text-shadow: $text_shadow_red;
}

.text-shadow-black {
    text-shadow: $text_shadow_black;
}

.text-shadow-gray {
    text-shadow: $text_shadow_gray;
}

h1 {
    @extend %headerText;
    font-size: 40pt;
}

h2 {
    @extend %headerText;
    font-size: 20pt;
}

h3 {
    @extend %headerText;
    margin: 0;
    font-size: 18pt;
}

h4 {
    @extend %headerText;
    margin: 0;
    font-size: 16pt;
}

h5 {
    @extend %headerText;
    margin: 0;
    font-size: 14pt;
}

h6 {
    @extend %headerText;
    margin: 0;
    font-size: 13pt;
}

.list-item-no-bullet {
    li:before {
        display: none;
    }
}

.list-item-root {
    li:before {
        @extend %listItemBefore;
    }
}

.list-item-nested {
    li:before {
        @extend %listItemBefore;
        content: "- ";
    }
}

.field-validation-error {
    color: #f00;
}

.field-validation-valid {
    display: none;
}

.validation-summary-errors {
    color: #f00;
    font-weight: bold;
}

.validation-summary-valid {
    display: none;
}

.borderedRow {
    border: 3px solid $darkNavyBlue;
}

.borderedHorizontal {
    border-Top: 3px solid $darkNavyBlue;
    border-Bottom: 3px solid $darkNavyBlue;
}

.borderedVertical {
    border-Left: 3px solid $darkNavyBlue;
    border-Right: 3px solid $darkNavyBlue;
}

.scrollHorizontally {
    max-width: 95vw;
    overflow-x: scroll;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

